--- a/styles/page.css
+++ b/styles/page.css
@@ -1,7 +1,8 @@
 * {
     margin: 0px;
 }
-.header{
+
+.header {
     text-align: right;
     background-image: url(../images/banner/banner2.png);
     background-repeat: no-repeat;
@@ -10,7 +11,8 @@
     width: 100%;
     height: 808px;
 }
-.primary-btn{
+
+.primary-btn {
     width: 160px;
     height: 64px;
     background-color: #F15B22;
@@ -19,16 +21,50 @@
     font-size: 20px;
     border: 5px;
 }
-.header-tittle{
+
+.header-tittle {
     font-size: 70px;
     padding-right: 200px;
     padding-top: 200px;
     padding-bottom: 30px;
 }
-.header-desc{
+
+.header-desc {
     padding-right: 200px;
 }
-.header-button{
+
+.header-button {
     padding-right: 200px;
     padding-top: 40px;
+}
+
+/* section-1 style */
+.failures {
+    display: flex;
+    align-items: center;
+    margin-top: 130px;
+    margin-bottom: 130px;
+    margin-left: 206px;
+    margin-right: 322px;
+    gap: 87px;
+}
+
+.fail-h3 {
+    font-weight: 700;
+    font-size: 40px;
+    color: #151414;
+    margin-bottom: 24px;
+}
+
+.fail-p {
+    font-weight: 400;
+    font-size: 16px;
+    color: #444343;
+    margin-bottom: 16px;
+}
+
+.fail-ul {
+    font-weight: 400;
+    font-size: 16px;
+    color: #444343;
 }
