--- a/styles/page.css
+++ b/styles/page.css
@@ -103,15 +103,55 @@
     color: #737272;
     text-align: center;
 }
-.icon-img1{
-   margin-left: 75px;
+
+.icon-img1 {
+    margin-left: 75px;
 }
-.icon-img2{
+
+.icon-img2 {
     margin-left: 27px;
- }
- .icon-img3{
+}
+
+.icon-img3 {
     margin-left: 45px;
- }
- .icon-img4{
+}
+
+.icon-img4 {
     margin-left: 30px;
- }
+}
+
+.bottom-image {
+    width: 1140px;
+    height: 300px;
+    background-repeat: no-repeat;
+    margin: 0px 230px 130px 230px;
+    background-image: url(../images/gradient2.png), url(../images/watch.png);
+    background-blend-mode: normal;
+    border-radius: 8px;
+}
+
+.bottom text {
+    width: 459px;
+    height: 182px;
+    /* padding-left: 294px;
+    padding-top: 2275.3px; */
+}
+
+.bm-head {
+    font-weight: 700;
+    font-size: 40px;
+    color: #FFFFFF;
+    padding-left: 64px;
+    padding-top: 59px;
+}
+
+.btn2 {
+    color: #F15B22;
+    font-weight: 600;
+    font-size: 20px;
+    text-align: center;
+    margin: 24px 916px 59px 64px;
+    background: #FFFFFF;
+    border-radius: 5px;
+    border-color: white;
+}
